fix search list overflowing the screen

--- a/frontend/src/app/core/global_search/input/global-search-input-mobile.component.sass
+++ b/frontend/src/app/core/global_search/input/global-search-input-mobile.component.sass
@@ -34,6 +34,7 @@ $search-input-height-mobile: 36px
 
         .ng-dropdown-panel
           width: 100% !important
+          transform: unset !important
 
     .top-menu-search--back-button
       @include unset-button-styles
