--- a/frontend/src/app/core/global_search/input/global-search-input.component.sass
+++ b/frontend/src/app/core/global_search/input/global-search-input.component.sass
@@ -110,6 +110,7 @@ $search-input-height: 30px
 
     .ng-dropdown-panel
       width: 520px !important
+      transform: translateX(-10%) !important
 
     .ng-option
       border-bottom: 1px solid var(--borderColor-default)
